# Rocq-Tail-Recursion-Detection

./: .gitignore  License  Makefile  Makefile.eval  MakefileEval.mk  MakefileOCaml.mk  Makefile_OCaml  Readme.md  Tests.v  _CoqProject  _CoqProjectTests  dump_rec_calls.sh  evaluation.sh  filter_prop.sed  modmapping.sed  rocq-trchecker.opam
evaluation/: CorelibCheck.v  CorelibExtraction.v  EvalCorelib.v  EvalStdlib.v  StdlibCheck.v  StdlibExtraction.v
examples/: Evaluation.v  Tests.v
test_suite/: NonTailRecursive.v  TailRecursive.v
theories/: Commands.v  ContextTracking.v  FixpointContext.v  FixpointReference.v  TailRecursionDetection.v
